corrected modal__form gap

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -59,12 +59,12 @@
   font-size: 24px;
   color: rgba(0, 0, 0, 1);
   margin: 0;
+  line-height: 29px;
 }
 
 .modal__form {
   display: flex;
   flex-direction: column;
-  gap: 30px;
   margin-top: 54px;
   width: 358px;
   padding: auto;
